module.less: Fix align of `Change sort direction` button

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -332,12 +332,12 @@ ul.action-links {
 
 .content form {
   margin-bottom: 2em;
-}
 
-form button[type=submit] {
-  margin-top: 0.5em;
-}
+  button[type=submit] {
+    margin-top: 0.5em;
+  }
 
-select {
-  width: 100%;
+  select {
+    width: 100%;
+  }
 }
